Forced a height on recent articles items to ensure a consistent spacing

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -215,6 +215,7 @@ aside#recent-articles {
   position: relative;
 }
 aside#recent-articles ol li {
+  height: 7vw;
   padding-top: 1rem;
 }
 aside#recent-articles ol li article {
